@@ -6,14 +6,15 @@ import com.sprint.mission.discodeit.dto.channel.PrivateChannelCreateRequest;
 import com.sprint.mission.discodeit.dto.channel.PublicChannelCreateRequest;
 import com.sprint.mission.discodeit.dto.channel.PublicChannelUpdateRequest;
 import com.sprint.mission.discodeit.entity.Channel;
-import com.sprint.mission.discodeit.entity.Message;
 import com.sprint.mission.discodeit.entity.ReadStatus;
 import com.sprint.mission.discodeit.entity.User;
+import com.sprint.mission.discodeit.mapper.ChannelMapper;
 import com.sprint.mission.discodeit.repository.ChannelRepository;
 import com.sprint.mission.discodeit.repository.MessageRepository;
 import com.sprint.mission.discodeit.repository.ReadStatusRepository;
 import com.sprint.mission.discodeit.repository.UserRepository;
 import com.sprint.mission.discodeit.service.ChannelService;
+import org.springframework.transaction.annotation.Transactional;
 import java.time.Instant;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
@@ -29,81 +30,45 @@ public class BasicChannelService implements ChannelService {
   private final ReadStatusRepository readStatusRepository;
   private final MessageRepository messageRepository;
   private final UserRepository userRepository;
+  private final ChannelMapper channelMapper;
 
   @Override
-  public Channel createPublicChannel(
+  public ChannelDto createPublicChannel(
       PublicChannelCreateRequest publicChannelCreateRequest) {
     Channel channel = new Channel(publicChannelCreateRequest.name(),
         publicChannelCreateRequest.description(), ChannelType.PUBLIC);
     channelRepository.save(channel);
-    return channel;
+    return channelMapper.toDto(channel);
   }
 
   @Override
-  public Channel createPrivateChannel(
+  @Transactional
+  public ChannelDto createPrivateChannel(
       PrivateChannelCreateRequest privateChannelCreateRequest) {
     Channel channel = new Channel(null, null, ChannelType.PRIVATE);
     channelRepository.save(channel);
     privateChannelCreateRequest.participantIds().forEach(userId -> {
-      User user = userRepository.findUserById(userId)
+      User user = userRepository.findById(userId)
           .orElseThrow(() -> new NoSuchElementException(userId + "에 해당하는 사용자를 찾을 수 없습니다."));
-      ReadStatus readStatus = new ReadStatus(user.getId(), channel.getId(), Instant.now());
+      ReadStatus readStatus = new ReadStatus(user, channel, Instant.now());
       readStatusRepository.save(readStatus);
     });
-    return channel;
+    return channelMapper.toDto(channel);
   }
 
   @Override
-  public ChannelDto findChannel(UUID channelId) {
-    Channel channel = channelRepository.findChannelById(channelId)
-        .orElseThrow(() -> new NoSuchElementException(channelId + "에 해당하는 채널을 찾을 수 없습니다."));
-
-    List<Message> messageList = messageRepository.findMessageByChannel(channelId);
-
-    Message lastMessage = messageList.stream()
-        .max(Comparator.comparing(Message::getCreatedAt))
-        .orElse(null);
-
-    if (channel.getType().equals(ChannelType.PRIVATE)) {
-      List<UUID> joinUserId = readStatusRepository.findByChannelId(channelId).stream()
-          .map(ReadStatus::getUserId)
-          .toList();
-      return new ChannelDto(
-          channel.getId(),
-          channel.getType(),
-          channel.getName(),
-          channel.getDescription(),
-          joinUserId,
-          lastMessage != null ? lastMessage.getCreatedAt() : null
-      );
-    }
-    return new ChannelDto(
-        channel.getId(),
-        channel.getType(),
-        channel.getName(),
-        channel.getDescription(),
-        lastMessage != null ? lastMessage.getCreatedAt() : null
-    );
-  }
-
-  @Override
+  @Transactional(readOnly = true)
   public List<ChannelDto> findAllByUserId(UUID userId) {
-    List<ReadStatus> readStatusFindByUserId = readStatusRepository.findByUserId(userId);
-
-    Set<UUID> privateChannelIdSet = readStatusFindByUserId.stream()
-        .map(ReadStatus::getChannelId)
-        .collect(Collectors.toSet());
-
-    return channelRepository.findAllChannel().stream()
-        .filter(channel -> channel.getType().equals(ChannelType.PUBLIC)
-            || privateChannelIdSet.contains(channel.getId()))
-        .map(channel -> findChannel(channel.getId()))
-        .toList();
+    return channelRepository.findAllByUser(userId).stream()
+        .map(channelMapper::toDto)
+        .collect(Collectors.toList());
   }
 
   @Override
-  public Channel updateChannel(UUID channelId, PublicChannelUpdateRequest channelUpdateParamDto) {
-    Channel channel = channelRepository.findChannelById(channelId)
+  @Transactional
+  public ChannelDto updateChannel(UUID channelId,
+      PublicChannelUpdateRequest channelUpdateParamDto) {
+    Channel channel = channelRepository.findById(channelId)
         .orElseThrow(
             () -> new NoSuchElementException(channelId + "에 해당하는 채널을 찾을 수 없습니다."));
 
@@ -113,24 +78,19 @@ public class BasicChannelService implements ChannelService {
 
     channel.updateChannelName(channelUpdateParamDto.newName());
     channel.updateChannelDescription(channelUpdateParamDto.newDescription());
-    return channelRepository.save(channel);
+    return channelMapper.toDto(channel);
   }
 
   @Override
+  @Transactional
   public void deleteChannel(UUID channelId) {
-    channelRepository.findChannelById(channelId)
+    Channel channel = channelRepository.findById(channelId)
         .orElseThrow(() -> new NoSuchElementException(channelId + "에 해당하는 채널을 찾을 수 없습니다."));
 
-    messageRepository.findMessageByChannel(channelId)
-        .forEach(message -> {
-          messageRepository.delete(message.getId());
-        });
+    messageRepository.deleteAll(messageRepository.findByChannelId(channelId));
 
-    readStatusRepository.findByChannelId(channelId)
-        .forEach(readStatus -> {
-          readStatusRepository.delete(readStatus.getId());
-        });
+    readStatusRepository.deleteAll(readStatusRepository.findByChannelId(channelId));
 
-    channelRepository.delete(channelId);
+    channelRepository.delete(channel);
   }
 }
